--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "itirenabackend",
   "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "start": " nodemon ./build/server.js"
   },
@@ -16,7 +15,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
     "nodemailer": "^6.9.13",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -25,6 +26,8 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.8",
     "@types/nodemailer": "^6.4.15",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.6",
     "typescript": "^5.4.5"
   },
   "keywords": [],
