--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": " nodemon ./build/server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "axios": "^1.6.7",
     "axios-cookiejar-support": "^5.0.2",
     "bcrypt": "^5.1.1",
@@ -14,8 +15,11 @@
     "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
+    "pdf2pic": "^3.1.1",
+    "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
@@ -24,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.7",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.12.8",
     "@types/nodemailer": "^6.4.15",
     "@types/swagger-jsdoc": "^6.0.4",
